--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
 
-<h1>This is a Heading</h1>
+<h1 style="background-color:DodgerBlue;">This is a Heading</h1>
   
-<p>I am Savio Varghese.</p>
+<p style="background-color:Tomato;">I am Savio Varghese.</p>
   
 <h2> I am a qualified chartered accountant</h2>
 
