--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Page Title</title>
 </head>
 
-<body>
+<body style="background-color:powderblue;">
 
 <h1 style="color:Tomato;">This is a Heading</h1>
   
