--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <h1 style="color:Tomato;">This is a Heading</h1>
   
-<p style="color:DodgerBlue;">I am Savio Varghese.</p>
+<p style="color:DodgerBlue;"><b>I am Savio Varghese.</b></p>
   
-<h2> I am a qualified chartered accountant</h2>
+<h2><i>I am a qualified chartered accountant</i></h2>
 
 </body>
 
