--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <html>
 
 <head>
+<style>
+title {color:green}
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
 <title>Page Title</title>
 </head>
 
