--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title {color:green}
 body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
+h2   {color:green}
 </style>
 <title>Page Title</title>
 </head>
