--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ h2   {color:green}
   
 <p style="color:DodgerBlue;"><b>I am Savio Varghese.</b></p>
   
-<h2><i>I am a qualified chartered accountant</i></h2>
+<h2><i><a href="sjv712.github.io/intro1.html>I am a qualified chartered accountant</a></i></h2>
 
 </body>
 
