--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@ h2   {color:green}
 </style>
 <title>Page Title</title>
 </head>
-
 <body style="background-color:powderblue;">
-
-<h1 style="color:Tomato;">This is a Heading</h1>
-  
+<h1 style="color:Tomato;">This is a Heading</h1> 
 <p style="color:DodgerBlue;"><b>I am Savio Varghese.</b></p>
-  
-<h2><i><a href="sjv712.github.io/intro1.html">I am a qualified chartered accountant</a></i></h2>
-
+<h2><i><a href="sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
 </body>
-
 </html>
