--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ h2   {color:green}
 <title>Page Title</title>
 </head>
 <body style="background-color:powderblue;">
-<h1 style="color:Tomato;">This is a Heading</h1> 
-<p style="color:DodgerBlue;"><b>I am Savio Varghese.</b></p>
-<h2><i><a href="sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
+<p style="color:;"><b>I am Savio Varghese.</b></p>
+<h2><i><a href="https://www.sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
 </body>
 </html>
