--- a/intro1.html
+++ b/intro1.html
@@ -7,7 +7,7 @@
 
 <h1></h1>
 <p>I am qualified chartered accountant,looking for opertunities in Finance & technology.</p>
-  <h2><u><a href="https://www.sjv712.github.io">Back</a></u></h2>
+  <h2><u><a href="http://www.sjv712.github.io">Back</a></u></h2>
 
 </body>
 </html>
