--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h2   {color:green}
 </head>
 <body style="background-color:powderblue;">
 <p style="color:;"><b>I am Savio Varghese.</b></p>
-<h2><i><a href="https://www.sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
+<h2><i><a href="http://www.sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
 <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
 </body>
 </html>
