--- a/intro1.html
+++ b/intro1.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1></h1>
-<p>I am qualified chartered accountant,looking for opertunities in Finance & technology.</p>
+<h2>I am qualified chartered accountant,looking for opertunities in Finance & technology.</h2>
 <h2><u><a href="http://sjv712.github.io">Back</a></u></h2>
 
 </body>
