--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ h2   {color:green}
 <body style="background-color:powderblue;">
 <p style="color:;"><b>I am Savio Varghese.</b></p>
 <h2><i><a href="http://sjv712.github.io/intro1.html"><u>My Introduction</u></a></i></h2>
-<iframe width="420" height="420"
-src="https://www.youtube.com/watch?v=SYnVYJDxu2Q">
+<<iframe width="560" height="315" src="https://www.youtube.com/embed/SYnVYJDxu2Q" allowfullscreen></iframe>>
 </iframe>
 </body>
 </html>
