--- a/Test2.html
+++ b/Test2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body {background-color: Green;}
+body {background-color: yellow;}
 h1   {color: blue;}
 p    {color: red;}
 </style>
