--- a/Test2.html
+++ b/Test2.html
@@ -11,7 +11,7 @@ p    {color: red;}
 <body>
 
 <h1>Testing of Internal CSS</h1>
-<p>An internal CSS is used to define a style for a single HTML page.An internal CSS is defined in the head section of an HTML page, within a <style> element.The following example sets the text color of ALL the <h1> elements (on that page) to blue, and the text color of ALL the <p> elements to red. In addition, the page will be displayed with a "powderblue" background color: </p>
-<h2><u><a href="http://sjv712.github.io">Back</a></u></h2>
+<p>An internal CSS is used to define a style for a single HTML page.An internal CSS is defined in the head section of an HTML page, within a <style> element.</p>
+<h2><a href="sjv712.github.io"><i>Back</i></a>
 </body>
 </html>
