--- a/Test2.html
+++ b/Test2.html
@@ -11,7 +11,7 @@ p    {color: red;}
 <body>
 
 <h1>Testing of Internal CSS</h1>
-<p>An internal CSS is used to define a style for a single HTML page.An internal CSS is defined in the head section of an HTML page, within a <style> element.</p>
-<h2><a href="sjv712.github.io"><i>Back</i></a>
+<p>An internal CSS is used to define a style for a single HTML page.An internal CSS is defined in the head section of an HTML page.</p>
+<h2><a href="sjv712.github.io"><i>Back</i></a></h2>
 </body>
 </html>
