--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ h2   {color:green}
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SYnVYJDxu2Q" allowfullscreen></iframe>
 <h2><u><a href="http://sjv712.github.io/Test1.html">Testing External CSS</a></u></h2>
 <h2><u><a href="http://sjv712.github.io/Test2.html">Testing Internal CSS</a></u></h2>
+<h2><u><a href="http://sjv712.github.io/html layout.html">Types of CSS</a></u></h2>
 </iframe>
 </body>
 </html>
