--- a/html layout.html
+++ b/html layout.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <header>
-  <h2>Types of CSS</h2>
+  <h1>Types of CSS</h1>
 </header>
 
 <section>
@@ -21,7 +21,7 @@
 </section>
 
 <footer>
-  <p>Footer</p>
+  <p>Page Footer</p>
 </footer>
 
 </body>
