--- a/html layout.html
+++ b/html layout.html
@@ -21,7 +21,7 @@
 </section>
 
 <footer>
-  <p>Page Footer</p>
+  <p><a href="http://sjv712.github.io/index.html"><b>End of Page</b></a></p>
 </footer>
 
 </body>
