--- a/html layout.html
+++ b/html layout.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <header>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="http://sjv712.github.io/styles.css">
   <h1>Types of CSS</h1>
 </header>
 
