--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <style>
 title {color:green}
-body {background-color: powderblue;}
+body {background-color: powderblue; text-align:center}
 h1   {color: blue;}
 p    {color: red;}
 h2   {color:green}
