--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 title {color:green}
 body {background-color: powderblue; text-align:center}
 h1   {color: blue;}
-p    {color: red;}
+p    {color: red; font-size:30px}
 h2   {color:green}
 </style>
 <title>Page Title</title>
