--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {background-color: powderblue; text-align:center}
 h1   {color: blue;}
 p    {color: red; font-size:30px}
 h2   {color:green}
+hr   {border-width: 2px}
 </style>
 <title>Page Title</title>
 </head>
