--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ hr   {border-width: 2px}
 <h2><u><a href="http://sjv712.github.io/Test2.html">Testing Internal CSS</a></u></h2>
 <hr>
 <h2><u><a href="http://sjv712.github.io/html layout.html">Types of CSS</a></u></h2>
+<img src="catz.jpg" alt="cat" width="500" height="600">
 </iframe>
 </body>
 </html>
