--- a/index2.html
+++ b/index2.html
@@ -77,21 +77,21 @@ body {
 <body>
 
 <div class="header">
-  <h1>Welcome to Joy's Github Pages</h1>
+  <h1>Welcome to Savio's Github Pages</h1>
   <p></p>
 </div>
 
 <div class="topnav">
-  <h1><a href="blogs.html">Blogs<a></h1>
-  <h1><a href="friends.html">Friends</a></h1>
+  <h1><a href="songs.html">Songs<a></h1>
+  <h1><a href="https://www.w3schools.com/css/default.asp">CSS Training</a></h1>
     
  </div>
 
 <div class="row">
   <div class="column side">
      <p>
-         <img src="cats.jpeg" alt="Pic not found" width=100%>
-         <img src="Orange.jpeg" alt="Pic not found" width=100%>
+         <img src="catz.jpg" alt="Pic not found" width=100%>
+         <img src="flowers.jpeg" alt="Pic not found" width=100%>
     </p>
   </div>
   
@@ -103,14 +103,14 @@ body {
 <p>
 <br>
 
-<h1><a href="blogs.html">Blogs<a></h1>
-<h1><a href="friends.html">Friends</a></h1>
+<h1><a href="songs.html">Songs<a></h1>
+<h1><a href="https://www.w3schools.com/css/default.asp">CSS training</a></h1>
 </p>
   
  </div>
   
     <div class="column side">
-      <p> <img src="flowerspring.jpeg" alt="Pic not found" width=100%></p>
+      <p> <img src="flowers2.jpg" alt="Pic not found" width=100%></p>
   </div>
   
 </body>
