--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@ body {
 </div>
 
 <div class="topnav">
-  <h1><a href="songs.html">Songs<a></h1>
+  <h1><a href="Songs.html">Songs<a></h1>
   <h1><a href="https://www.w3schools.com/css/default.asp">CSS Training</a></h1>
     
  </div>
@@ -103,7 +103,7 @@ body {
 <p>
 <br>
 
-<h1><a href="songs.html">Songs<a></h1>
+<h1><a href="Songs.html">Songs<a></h1>
 <h1><a href="https://www.w3schools.com/css/default.asp">CSS training</a></h1>
 </p>
   
