--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@ body {
   <div class="column side">
      <p>
          <img src="catz.jpg" alt="Pic not found" width=100%>
-         <img src="flowers.jpeg" alt="Pic not found" width=100%>
+         <img src="flowers.jpg" alt="Pic not found" width=100%>
     </p>
   </div>
   
