--- a/index2.html
+++ b/index2.html
@@ -28,9 +28,9 @@ body {
 
 /* Style the topnav links */
 .topnav a {
-  float: left;
+  float: center;
   display: block;
-  color: black;
+  color: Red;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -39,7 +39,7 @@ body {
 /* Change color on hover */
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: Red;
 }
 
 /* Create three unequal columns that floats next to each other */
