--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@ body {
 .topnav a {
   float: center;
   display: block;
-  color: Red;
+  color: Green;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -39,7 +39,7 @@ body {
 /* Change color on hover */
 .topnav a:hover {
   background-color: #ddd;
-  color: Red;
+  color: Blue;
 }
 
 /* Create three unequal columns that floats next to each other */
