--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #ffa500;
+  background-color: Black;
 }
 
 /* Style the topnav links */
