--- a/index2.html
+++ b/index2.html
@@ -44,8 +44,8 @@ body {
 
 /* Create three unequal columns that floats next to each other */
 .column {
-  float: left;
-  padding: 10px;
+  float: center;
+  padding: 20px;
 }
 
 /* Left and right column */
