--- a/index2.html
+++ b/index2.html
@@ -23,12 +23,12 @@ body {
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: Black;
+  background-color: Orange;
 }
 
 /* Style the topnav links */
 .topnav a {
-  float: center;
+  float: right;
   display: block;
   color: Green;
   text-align: center;
