--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@ body {
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
-  padding: 10px;
+  background-color: Yellow;
+  padding: 300px;
   text-align: center;
 }
 
@@ -28,7 +28,7 @@ body {
 
 /* Style the topnav links */
 .topnav a {
-  float: right;
+  float: left;
   display: block;
   color: Green;
   text-align: center;
@@ -45,7 +45,7 @@ body {
 /* Create three unequal columns that floats next to each other */
 .column {
   float: center;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* Left and right column */
@@ -67,9 +67,9 @@ body {
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1600px) {
   .column.side, .column.middle {
-    width: 100%;
+    width: 50%;
   }
 }
 </style>
