--- a/index2.html
+++ b/index2.html
@@ -15,22 +15,22 @@ body {
 
 /* Style the header */
 .header {
-  background-color: Yellow;
-  padding: 30px;
+  background-color: #f1f1f1;
+  padding: 20px;
   text-align: center;
 }
 
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: Orange;
+  background-color: #ffa500;
 }
 
 /* Style the topnav links */
 .topnav a {
   float: left;
   display: block;
-  color: Green;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -39,12 +39,12 @@ body {
 /* Change color on hover */
 .topnav a:hover {
   background-color: #ddd;
-  color: Blue;
+  color: black;
 }
 
 /* Create three unequal columns that floats next to each other */
 .column {
-  float: center;
+  float: left;
   padding: 10px;
 }
 
@@ -69,7 +69,7 @@ body {
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 1600px) {
   .column.side, .column.middle {
-    width: 50%;
+    width: 100%;
   }
 }
 </style>
