--- a/Test1.html
+++ b/Test1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test 1</title>
+<title>Blogs</title>
 </head>
 <body>
 
-<h1>Testing CSS </h1>
-<p><link rel="stylesheet" href="https://www.w3schools.com/html/styles.css"></p>
+<h1>methods of money transfers</h1>
+<p><link rel="stylesheet" href=""></p>
 <h2><u><a href="http://sjv712.github.io">Back</a></u></h2>
 
 </body>
