--- a/moneytransfer.html
+++ b/moneytransfer.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Money Tranfer Methods</title>
+</head>
+<body>
+
+<h1><b>NEFT,RTGS & IMPS : the modern means of money transfer</b></h1>
+<p>xEarlier, we used to write cheques which would take from 3 days upto a week to transfer the money from one bank account to another. 
+Over the years, it has gotten easier to transfer money online. But which method should you choose to transfer your money to others? 
+Banks provide several modes such as NEFT, RTGS and Immediate Payment Service (IMPS). 
+Each of the transfer methods has different features.</p>
+<h2><b>Immediate Payments Service (IMPS):</b></h2>
+<p>IMPS provides Real-time fund transfer on online banking channels of banks such as mobile banking , net banking , through SMS and via ATMs.
+In the IMPS system, the NPCI facilitates the transfer of funds between member bank accounts. The transfer from your account to the beneficiary account is instant. You would require the beneficiary bank account number and IFSC code to complete the transaction. 
+These transfers can occur 24/7 .The minimum value of the transaction is Re 1 & the maximum value is 2 lakh. Charges vary from bank to bank.</p>
+<h2><b>National Electronic Funds Transfer (NEFT):</b></h2>
+<p>Similar to IMPS, NEFT is used to transfer money from your bank account to beneficiary account in the same or different bank. 
+However, these transfers occur in batches of half hour. Hence, they are not instantaneous. The minimum transaction value is one rupee and maximum transfer limit varies with each bank .
+NEFT transfers made through a bank’s mobile app or net banking facility do not attract any charges. But if you go to your branch to do a NEFT transfer, there are charges.</p>
+<h2><b>Real Time Gross Settlement (RTGS):</b></h2>
+<p>In the RTGS process, the money is credited in the beneficiary’s account in real time, that is, immediately. The RTGS system is primarily meant for large-value transactions that require immediate clearing. It’s widely used by corporates and institutions for fund transfers on a real-time basis.
+The minimum amount that can be transferred through RTGS is Rs 2 lakh and maximum transfer limit varies with the bank, but there is no upper ceiling set by the RBI.</p>
+<p><i>The best option for you would depend upon your requirements. For low value transactions upto Rs 2 lakh, IMPS will do for you. 
+However if you have large & frequent transactions with the added benefit of instantaneous transfer (during bank working hours), RTGS is best for you.
+For all other necessities (no need for immediate transfers & within working hours of the bank), NEFT would do just fine.</i></p> 
+</body>
+</html>
