--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ hr   {border-width: 2px}
 <hr>
 <h2><i><a href="http://sjv712.github.io/Songs.html"><u>Songs</u></a></i></h2>
 <hr>
-<h2><u><a href="http://sjv712.github.io/Test1.html">Testing External CSS</a></u></h2>
+<h2><u><a href="http://sjv712.github.io/Blogs.html">Blogs</a></u></h2>
 <hr>
 <h2><u><a href="http://sjv712.github.io/Test2.html">Testing Internal CSS</a></u></h2>
 <hr>
