--- a/Blogs.html
+++ b/Blogs.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>methods of money transfers</h1>
-<p><link rel="stylesheet" href="https://sjv712.github.io/moneytransfer.html">Money Transfer Methods</p>
+<p><a href="https://sjv712.github.io/moneytransfer.html">Money Transfer Methods</a></p>
 <h2><u><a href="http://sjv712.github.io">Back</a></u></h2>
 
 </body>
