--- a/Blogs.html
+++ b/Blogs.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>methods of money transfers</h1>
-<p><a href="https://sjv712.github.io/moneytransfer.html">Money Transfer Methods</a></p>
+<p><h1><a href="https://sjv712.github.io/moneytransfer.html">Money Transfer Methods</a></h1></p>
 <h2><u><a href="http://sjv712.github.io">Back</a></u></h2>
 
 </body>
