--- a/moneytransfer.html
+++ b/moneytransfer.html
@@ -25,5 +25,12 @@ The minimum amount that can be transferred through RTGS is Rs 2 lakh and maximum
 <p><i>The best option for you would depend upon your requirements. For low value transactions upto Rs 2 lakh, IMPS will do for you. 
 However if you have large & frequent transactions with the added benefit of instantaneous transfer (during bank working hours), RTGS is best for you.
 For all other necessities (no need for immediate transfers & within working hours of the bank), NEFT would do just fine.</i></p> 
+<h2><b>UPI/BHIM </b></h2>
+<p>Unified Payments Interface is a real time interbank payment system that allows sending or requesting money. 
+Any UPI client app may be used and multiple bank accounts may be linked to single app.
+BHIM is an implementation of UPI, separate from the UPI wallets offered by the bank (POCKETS by ICICI, PayZapp by HDFC etc).
+Using UPI is free for paying to merchants at stores, online shopping and utility bill payments.
+However, for person to person transfer, certain charges may be levied by the banks beyond a set number of free transactions. 
+Both the charges & limit of free transactions vary from Bank to Bank.</p>
 </body>
 </html>
